/* $Id: ChangeLog,v 1.1325 2001-03-27 20:46:51 sandervl Exp $ */

 2001-03-27: Sander van Leeuwen <sandervl@xs4all.nl>   
    - USER32:   o Rewrote cursor handling. No longer use Open32, but convert
                  cursor to OS/2 format during creation.
                  (also fixes crash during WinDVD startup)
                o Ported Wine's cursor/icon cache code. Odin no longer
                  leaks memory when apps reload icons/cursors.
                o Check for DIB section selection in ReleaseDC and unselect it.
                  (only for non-CS_OWNDC hdcs)
    - KERNEL32: o Removed cursor & cursor group conversion code
    - GDI32:    o SelectObject fixes for DIB sections
                o Check for DIB section selection in DeleteDC and unselect it.
                  (fixes crash in WinDVD)

 2001-03-27: Michal Necasek <michalnec@volny.cz>
    - OPENGL:   o Less stict parameter checking in wglSetPixelFormat
                  (fixes the game Hitman)

 2001-03-25: Michal Necasek <michalnec@volny.cz>
    - KERNEL32: o Turn off all optimizations for exceptions.cpp in release build (!)
    - DINPUT/USER32:
                o Fixed keyboard handling. Now arrow keys should work right
                  on both numpad and the separate arrow block among other things.

 2001-03-25: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o If a static window has children, then we can't return HTTRANSPARENT
                  for WM_NCHITTEST. For some reason PM then sends all mouse messages 
                  to the parent of the static window; even if they are intended 
                  for the children of the static window.
                  TODO: This could break some win32 apps (parent not receiving mouse
                        message for static window (non-child) area)
                        Rewrite NCHITTEST handling. (don't use PM)
                  (fixes Roger Wilco config window input)
                o Call GlobalAddAtomA/W in RegisterWindowMessageA/W